--- a/Dubbo-core/pom.xml
+++ b/Dubbo-core/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>Dubbo-parent</artifactId>
+        <groupId>com.zgf.Dubbo</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zgf.Dubbo</groupId>
-    <artifactId>Dubbo-parent</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>Dubbo-core</module>
-    </modules>
+    <artifactId>Dubbo-core</artifactId>
 
 
 </project>
