--- a/dubbo-core/pom.xml
+++ b/dubbo-core/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Dubbo-parent</artifactId>
-        <groupId>com.zgf.Dubbo</groupId>
+        <artifactId>dubbo-parent</artifactId>
+        <groupId>com.zgf.dubbo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Dubbo-core</artifactId>
+    <artifactId>dubbo-core</artifactId>
 
 
 </project>
