--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>dubbo-core</module>
+        <module>dobbo-provider</module>
+        <module>dubbo-consumer</module>
     </modules>
-
-
 </project>
